src/style/global.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap");

html {
    height: 100%;
    overflow: hidden;
}
body {
    height: 100%;
    margin: 0;
    font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
        "Droid Sans", "Helvetica Neue", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-color: rgba(242, 242, 242, 0.4);
    font-weight: 400;
}
h1,
h2 {
    font-weight: 800;
}
h3,
h4 {
    font-weight: 600;
}
#afzal {
    height: 100%;
    display: flex;
    flex-direction: column;
}

label {
    font-weight: 600 !important;
}

a {
    color: #0073b1;
    font-weight: 600;
}

@media only screen and (max-width: 767px) {
    .ui.container {
        width: auto !important;
        margin-left: 1em !important;
        margin-right: 1em !important;
    }
    .ui.container.main {
        /* transition: margin-left 0.2s ease-in-out; */
        transform: translateX(0);
        transition: transform 0.2s ease-in-out;
        margin-top: 76px;
        margin-bottom: 10px;
    }
    .ui.container.drawer-active {
        /* margin-left: calc(1em + 220px) !important; */
        transform: translateX(calc(1em + 220px));
    }
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
    .ui.container {
        width: auto !important;
        margin-left: 1.5em !important;
        margin-right: 1.5em !important;
    }
    .ui.container.main {
        /* transition: margin-left 0.2s ease-in-out; */
        margin-left: calc(1.5em + 65px) !important;
        transform: translateX(0);
        transition: transform 0.2s ease-in-out;
        margin-top: 100px;
        margin-bottom: 20px;
        height: calc(100% - 66px - 61px);
        overflow-y: auto;
    }
    .ui.container.main.drawer-active {
        /* margin-left: calc(1.5em + 256px) !important; */
        transform: translateX(calc(256px - 65px));
    }
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
    .ui.container {
        width: auto !important;
        margin-left: 1.5em !important;
        margin-right: 1.5em !important;
    }
    .ui.container.main {
        margin-left: calc(1.5em + 65px) !important;
        transform: translateX(0);
        /* transition: margin-left 0.2s ease-in-out; */
        transition: transform 0.2s ease-in-out;
        margin-top: 100px;
        margin-bottom: 20px;
    }
    .ui.container.main.drawer-active {
        /* margin-left: calc(1.5em + 256px) !important; */
        transform: translateX(calc(256px - 65px));
    }
}

@media only screen and (min-width: 1200px) {
    .ui.container {
        width: auto !important;
        margin-left: 1.5em !important;
        margin-right: 1.5em !important;
    }
    .ui.container.main {
        margin-left: calc(1.5em + 65px) !important;
        /* transition: margin-left 0.2s ease-in-out; */
        transition: transform 0.2s ease-in-out;
        margin-top: 100px;
        margin-bottom: 20px;
    }
    .ui.container.main.drawer-active {
        /* margin-left: calc(1.5em + 256px) !important; */
        transform: translateX(calc(256px - 65px));
    }
}

.ui.card {
    margin: 0;
}

.ui.card:first-child {
    margin: 0;
}

